# Copyright (c) 2022 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")

matter_enable_tracing_support = true

declare_args() {
  # Define the tracing destination for an app
  # Sets up configuration options so that tracing goes to the specified target
  matter_app_trace = "perfetto"
}

if (matter_app_trace == "perfetto") {
  # Perfetto requires C++17
  cpp_standard = "gnu++17"

  matter_trace_config = "${chip_root}/src/tracing/perfetto:perfetto_tracing"
} else if (matter_app_trace == "pw_trace") {
  matter_trace_config = "${chip_root}/src/tracing/pwtrace:pwtrace_tracing"

  pw_assert_BACKEND = "$dir_pw_assert_tokenized"
  pw_log_BACKEND = "$dir_pw_log_tokenized"

  pw_build_LINK_DEPS = [
    "$dir_pw_assert:impl",
    "$dir_pw_log:impl",
  ]
} else if (matter_app_trace == "none") {
  matter_trace_config = "${chip_root}/src/tracing/none"
} else {
  assert(false)  # must be a supported option
}
