# Copyright (c) 2025 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("include-config") {
  # allow including via 'event-triggers/....'
  include_dirs = [ "../" ]
}

source_set("event-triggers") {
  sources = [
    "BooleanStateConfigurationTestEventTriggerHandler.cpp",
    "BooleanStateConfigurationTestEventTriggerHandler.h",
    "CommodityPriceTestEventTriggerHandler.h",
    "DeviceEnergyManagementTestEventTriggerHandler.h",
    "ElectricalGridConditionsTestEventTriggerHandler.h",
    "EnergyEvseTestEventTriggerHandler.h",
    "EnergyReportingTestEventTriggerHandler.h",
    "GenericFaultTestEventTriggerHandler.cpp",
    "GenericFaultTestEventTriggerHandler.h",
    "MeterIdentificationTestEventTriggerHandler.h",
    "OTATestEventTriggerHandler.cpp",
    "OTATestEventTriggerHandler.h",
    "SmokeCOTestEventTriggerHandler.h",
    "SoftwareDiagnosticsTestEventTriggerHandler.h",
    "WaterHeaterManagementTestEventTriggerHandler.h",
    "WiFiDiagnosticsTestEventTriggerHandler.h",
  ]

  public_deps = [
    "${chip_root}/src/app:generic-test-event-trigger-handler",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/src/lib/support:span",
    "${chip_root}/zzz_generated/app-common/clusters/GeneralDiagnostics",
    "${chip_root}/zzz_generated/app-common/clusters/SoftwareDiagnostics",

    # NOTE: these are currently highly coupled assuming implementations
    #       for clusters exist. In particular they access:
    #        - GeneralDiagnostics::Instance
    #        - GetRequestorInstance for OTA
  ]
  public_configs = [ ":include-config" ]
}
