# Copyright (c) 2024 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

source_set("ember") {
  sources = [
    "interface.cpp",
    "interface.h",
  ]

  public_deps = [
    "${chip_root}/src/attributes/database",
    "${chip_root}/src/lib/support",

    # TODO:
    #   dependencies Would contain attribute-database, ember-compat-functions
    #   or similar, however those depend on code generation and are included in
    #   `chip_data_model` rules only. As such, attribute-storage and similar are not
    #   included here.
    #
    #   The headers `src/app/util/af.h` are also not a part of any GN file, so dependencies
    #   are not properly tracked either
  ]
}
