# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")

# Configuration for using perfetto tracing macros exclusively.
config("tracing") {
  include_dirs = [ "include" ]
}

source_set("pwtrace_tracing") {
  public = [ "include/matter/tracing/macros_impl.h" ]
  public_configs = [ ":tracing" ]

  public_deps = [
    "$dir_pw_trace",
    "$dir_pw_trace_tokenized",
  ]
}

static_library("pwtrace") {
  sources = [
    "pwtrace_tracing.cpp",
    "pwtrace_tracing.h",
  ]

  public_deps = [
    ":pwtrace_tracing",
    "$dir_pw_trace",
    "$dir_pw_trace_tokenized",
    "${chip_root}/src/lib/address_resolve",
    "${chip_root}/src/tracing",
    "${chip_root}/src/transport",
  ]

  public_configs = [ ":tracing" ]
}
