# Copyright (c) 2025 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("${chip_root}/build/chip/buildconfig_header.gni")
import("../enabled_devices.gni")

# Generate app_config/enabled_devices.h.
# buildconfig_header maps GN true/false to 1/0 automatically, so the boolean
# flags from enabled_devices.gni can be used directly in the defines list.
# The output lands in ${root_gen_dir}/include/app_config/enabled_devices.h,
# which is already on the global include path, so no extra config is needed.
#
# Adding a new device: add one entry to defines here and two lines in
# enabled_devices.gni (one initialiser, one foreach arm).
buildconfig_header("enabled_devices_buildconfig") {
  header = "enabled_devices.h"
  header_dir = "app_config"

  defines = [
    "ALL_DEVICES_ENABLE_CONTACT_SENSOR=${all_devices_enable_contact_sensor}",
    "ALL_DEVICES_ENABLE_WATER_LEAK_DETECTOR=${all_devices_enable_water_leak_detector}",
    "ALL_DEVICES_ENABLE_OCCUPANCY_SENSOR=${all_devices_enable_occupancy_sensor}",
    "ALL_DEVICES_ENABLE_CHIME=${all_devices_enable_chime}",
    "ALL_DEVICES_ENABLE_DIMMABLE_LIGHT=${all_devices_enable_dimmable_light}",
    "ALL_DEVICES_ENABLE_ON_OFF_LIGHT=${all_devices_enable_on_off_light}",
    "ALL_DEVICES_ENABLE_SPEAKER=${all_devices_enable_speaker}",
    "ALL_DEVICES_ENABLE_SOIL_SENSOR=${all_devices_enable_soil_sensor}",
  ]
}

source_set("device-factory") {
  sources = [ "DeviceFactory.h" ]

  public_deps = [
    ":enabled_devices_buildconfig",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/boolean-state-sensor",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/chime",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/dimmable-light/impl:logging",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/occupancy-sensor/impl:toggling",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/on-off-light",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/soil-sensor/impl:increasing",
    "${chip_root}/examples/all-devices-app/all-devices-common/devices/speaker/impl:logging",
    "${chip_root}/src/lib/support",
  ]
}
